--- a/ZLiveResponse.ipynb
+++ b/ZLiveResponse.ipynb
@@ -6,9 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Windows Live Response Collection \n",
-    "\n",
-    "When responding to a possible incident you maybe need to collect data to further determine next steps for your analysis  steps. The first step in data collection is collecting live response. Live response is the process of using an automated tools to collect data both volatile and non-volatile data. After collection live response analysis helps to confirm or deny incidents and help to provide furhter leads, indicators of compromise, hits and compromised hosts. "
+    
+    "date"
 
    ]
   },
